--- a/MyApp/www/css/styles.css
+++ b/MyApp/www/css/styles.css
@@ -389,7 +389,7 @@ body{
   border: 0px;
   padding: 10px 35px;
   border-radius: 5px;
-  margin: 0px 2px;
+  margin: 2px 2px;
   display: inline-block;
   float: inherit;
 }
@@ -404,7 +404,8 @@ body{
   background: #09283c;
   border: 0px;
   float: right;
-  padding: 5px 20px;
+  height:32px;
+  padding: 5px 20px 5px 5px;
   color: #fff900;
   border-left: 1px solid #0e3e5d;
 }
